--- a/prd-workorder-app.env.example
+++ b/prd-workorder-app.env.example
@@ -2,5 +2,5 @@
 WEB_URL="https://example.com"
 
 # Enter credentials for web login
-WEB_USERNAME="name"
+WEB_USERNAME="username"
 WEB_PASSWORD="password"
