--- a/.drone.yml
+++ b/.drone.yml
@@ -31,6 +31,7 @@ steps:
         from_secret: docker-registry-password
       registry: docker-registry.theautomation.nl
       repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-api
+      dockerfile: api.dockerfile
       auto_tag: true
 
 ---
