--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ steps:
   - name: docker-compose
     image: tmaier/docker-compose:latest
     commands:
+      - mv prd-${DRONE_REPO_NAME}-worker.env.example prd-${DRONE_REPO_NAME}-worker.env
       - docker-compose config -q
 
 ---
@@ -22,7 +23,7 @@ depends_on:
   - validate
 
 steps:
-  - name: publish
+  - name: publish api image
     image: plugins/docker
     settings:
       username:
@@ -32,6 +33,18 @@ steps:
       registry: docker-registry.theautomation.nl
       repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-api
       dockerfile: api.dockerfile
+      auto_tag: true
+
+  - name: publish worker image
+    image: plugins/docker
+    settings:
+      username:
+        from_secret: docker-registry-username
+      password:
+        from_secret: docker-registry-password
+      registry: docker-registry.theautomation.nl
+      repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-worker
+      dockerfile: worker.dockerfile
       auto_tag: true
 
 ---
