renamed container name worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     image: docker-registry.theautomation.nl/coen/prd-workorder-api:latest
     container_name: prd-workorder-api
     restart: unless-stopped
-    env_file: prd-workorder-worker.env
     networks:
       - workorder
     ports:
@@ -15,14 +14,12 @@ services:
 
   prd-workorder-worker:
     image: docker-registry.theautomation.nl/coen/prd-workorder-worker:latest
-    container_name: prd-workorder-api
+    container_name: prd-workorder-worker
+    env_file: prd-workorder-worker.env
     restart: unless-stopped
-    networks:
-      - workorder
-    ports:
-      - 8050:8000
     volumes:
       - ./app/database:/app/db
+
 networks:
   workorder:
     name: workorder
