--- a/.drone.yml
+++ b/.drone.yml
@@ -23,17 +23,17 @@ depends_on:
   - validate
 
 steps:
-  # - name: publish api image
-  #   image: plugins/docker
-  #   settings:
-  #     username:
-  #       from_secret: docker-registry-username
-  #     password:
-  #       from_secret: docker-registry-password
-  #     registry: docker-registry.theautomation.nl
-  #     repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-api
-  #     dockerfile: api.dockerfile
-  #     auto_tag: true
+  - name: publish api image
+    image: plugins/docker
+    settings:
+      username:
+        from_secret: docker-registry-username
+      password:
+        from_secret: docker-registry-password
+      registry: docker-registry.theautomation.nl
+      repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-api
+      dockerfile: api.dockerfile
+      auto_tag: true
 
   - name: publish worker image
     image: plugins/docker
