--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 8050:8000
     volumes:
       - ./app/database:/app/db
+      - /etc/localtime:/etc/localtime:ro
 
   prd-workorder-worker:
     image: docker-registry.theautomation.nl/coen/prd-workorder-worker:latest
@@ -19,6 +20,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./app/database:/app/db
+      - /etc/localtime:/etc/localtime:ro
 
 networks:
   workorder:
