--- a/app/logging.ini
+++ b/app/logging.ini
@@ -27,7 +27,7 @@ args=(sys.stderr,)
 class=FileHandler
 level=DEBUG
 formatter=file_formatter
-args=("../log/workorder.log",)
+args=("/app/log/workorder.log",)
 
 [formatter_stream_formatter]
 format=%(asctime)s - %(levelname)-8s - %(name)s - %(funcName)s:%(lineno)d - %(message)s
