--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -1,10 +1,12 @@
 anyio==3.4.0
 asgiref==3.4.1
+autopep8==1.6.0
 click==8.0.3
 fastapi==0.70.0
 greenlet==1.1.2
 h11==0.12.0
 idna==3.3
+pycodestyle==2.8.0
 pydantic==1.8.2
 sniffio==1.2.0
 SQLAlchemy==1.4.28
