--- a/.drone.yml
+++ b/.drone.yml
@@ -35,17 +35,17 @@ steps:
       dockerfile: api.dockerfile
       auto_tag: true
 
-  # - name: publish worker image
-  #   image: plugins/docker
-  #   settings:
-  #     username:
-  #       from_secret: docker-registry-username
-  #     password:
-  #       from_secret: docker-registry-password
-  #     registry: docker-registry.theautomation.nl
-  #     repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-worker
-  #     dockerfile: worker.dockerfile
-  #     auto_tag: true
+  - name: publish worker image
+    image: plugins/docker
+    settings:
+      username:
+        from_secret: docker-registry-username
+      password:
+        from_secret: docker-registry-password
+      registry: docker-registry.theautomation.nl
+      repo: docker-registry.theautomation.nl/coen/prd-${DRONE_REPO_NAME}-worker
+      dockerfile: worker.dockerfile
+      auto_tag: true
 
 ---
 kind: pipeline
