fix shebang entry.sh

--- a/app/logging.ini
+++ b/app/logging.ini
@@ -30,8 +30,8 @@ formatter=file_formatter
 args=("/app/log/workorder.log",)
 
 [formatter_stream_formatter]
-format=%(levelname)-8s - %(funcName)s - %(message)s
+format=%(levelname) - %(message)s
 
 [formatter_file_formatter]
-format=%(asctime)s - %(levelname)-8s - %(name)s - %(funcName)s:%(lineno)d - %(message)s
+format=%(asctime)s - %(levelname) - %(name)s - %(funcName)s:%(lineno)d - %(message)s
 
