--- a/app/logging.ini
+++ b/app/logging.ini
@@ -33,5 +33,5 @@ args=("/app/log/workorder.log",)
 format=%(levelname) - %(message)s
 
 [formatter_file_formatter]
-format=%(asctime)s - %(levelname) - %(name)s - %(funcName)s:%(lineno)d - %(message)s
+format=%(asctime)s - %(levelname)s - %(name)s - %(funcName)s:%(lineno)d - %(message)s
 
