--- a/app/logging.ini
+++ b/app/logging.ini
@@ -30,7 +30,7 @@ formatter=file_formatter
 args=("/app/log/workorder.log",)
 
 [formatter_stream_formatter]
-format=%(levelname) - %(message)s
+format=%(levelname)s - %(message)s
 
 [formatter_file_formatter]
 format=%(asctime)s - %(levelname)s - %(name)s - %(funcName)s:%(lineno)d - %(message)s
