--- a/prd-workorder-worker.env.example
+++ b/prd-workorder-worker.env.example
@@ -1,6 +1,11 @@
 # URL to open 
 WEB_URL="https://example.com"
 
-# Enter credentials for web login
+# Credentials for WEB_URL login
 WEB_USERNAME="username"
 WEB_PASSWORD="password"
+
+# Save a .png image of a workorder with entered time
+# Set to true to save or set false or empty to not save a image
+# path where images will be saved in docker container is '/app/log'
+SAVE_IMAGE=false
