--- a/prd-workorder-worker.env.example
+++ b/prd-workorder-worker.env.example
@@ -5,7 +5,7 @@ WEB_URL="https://example.com"
 WEB_USERNAME="username"
 WEB_PASSWORD="password"
 
-# Save a .png image of a workorder with entered time
+# Save a .png image of the workorder with entered time
 # Set to true to save or set false or empty to not save a image
 # path where images will be saved in docker container is '/app/log'
 SAVE_IMAGE=false
