--- a/prd-workorder-worker.env.example
+++ b/prd-workorder-worker.env.example
@@ -5,7 +5,12 @@ WEB_URL="https://example.com"
 WEB_USERNAME="username"
 WEB_PASSWORD="password"
 
+# All workorders have text, to find and fill in the correct workorder, make a comma separated list of words to search for. 
+# The words may be part of text for e.g. if the word "dienst" is in the list it will find "Weekenddienst", "Avonddienst" and "Dagdienst"
+# The rule is, if it contains {word} case sensitive
+WORKORDER_WORDS="dienst, Operator, motorkap"
+
 # Save a .png image of the workorder with entered time
 # Set to true to save or set false or empty to not save a image
 # path where images will be saved in docker container is '/app/log'
-SAVE_IMAGE=false
+SAVE_IMAGE=true
