--- a/cicd/tekton/pipeline.yaml
+++ b/cicd/tekton/pipeline.yaml
@@ -64,63 +64,64 @@ spec:
         - name: FORMAT
           value: "docker"
 
-    # - name: replace-image-tag-api
-    #   taskRef:
-    #     name: replace-image-tag
-    #   runAfter:
-    #     - build-push-image-api
-    #   workspaces:
-    #     - name: source
-    #       workspace: shared-data
-    #   params:
-    #     - name: IMAGE_REPO
-    #       value: tools
-    #     - name: IMAGE
-    #       value: $(context.pipelineRun.name)
-    #     - name: IMAGE_DIGEST
-    #       value: $(tasks.build-push-image.results.IMAGE_DIGEST)
+    - name: replace-image-tag-api
+      taskRef:
+        name: replace-image-tag
+      runAfter:
+        - build-push-image-api
+      workspaces:
+        - name: source
+          workspace: shared-data
+      params:
+        - name: IMAGE_REPO
+          value: tools
+        - name: IMAGE
+          value: $(context.pipelineRun.name)-api
+        - name: IMAGE_DIGEST
+          value: $(tasks.build-push-image-api.results.IMAGE_DIGEST)
 
-    # - name: replace-image-tag-worker
-    #   taskRef:
-    #     name: replace-image-tag
-    #   runAfter:
-    #     - build-push-image-worker
-    #   workspaces:
-    #     - name: source
-    #       workspace: shared-data
-    #   params:
-    #     - name: IMAGE_REPO
-    #       value: tools
-    #     - name: IMAGE
-    #       value: $(context.pipelineRun.name)
-    #     - name: IMAGE_DIGEST
-    #       value: $(tasks.build-push-image.results.IMAGE_DIGEST)
+    - name: replace-image-tag-worker
+      taskRef:
+        name: replace-image-tag
+      runAfter:
+        - build-push-image-worker
+      workspaces:
+        - name: source
+          workspace: shared-data
+      params:
+        - name: IMAGE_REPO
+          value: tools
+        - name: IMAGE
+          value: $(context.pipelineRun.name)-worker
+        - name: IMAGE_DIGEST
+          value: $(tasks.build-push-image-worker.results.IMAGE_DIGEST)
 
-    # - name: git-push
-    #   taskRef:
-    #     name: git-cli
-    #   runAfter:
-    #     - replace-image-tag
-    #   workspaces:
-    #     - name: ssh-directory
-    #       workspace: github-ssh
-    #     - name: source
-    #       workspace: shared-data
-    #   params:
-    #     - name: GIT_SCRIPT
-    #       value: |
-    #         git add ./deploy/k8s/manifest.yaml
-    #         git commit -m "tekton set new image digest"
-    #         git remote set-url origin git@github.com:theautomation/$(context.pipeline.name).git
-    #         git push origin HEAD:main
+    - name: git-push
+      taskRef:
+        name: git-cli
+      runAfter:
+        - replace-image-tag-api
+        - replace-image-tag-worker
+      workspaces:
+        - name: ssh-directory
+          workspace: github-ssh
+        - name: source
+          workspace: shared-data
+      params:
+        - name: GIT_SCRIPT
+          value: |
+            git add ./deploy/k8s/manifest.yaml
+            git commit -m "tekton set new image digest"
+            git remote set-url origin git@github.com:theautomation/$(context.pipeline.name).git
+            git push origin HEAD:main
 
-    # - name: slack-message
-    #   taskRef:
-    #     name: send-to-channel-slack
-    #   runAfter:
-    #     - git-push
-    #   params:
-    #     - name: token-secret
-    #       value: token-secret
-    #     - name: message
-    #       value: "Tekton had run $(context.pipelineRun.name) successfully"
+    - name: slack-message
+      taskRef:
+        name: send-to-channel-slack
+      runAfter:
+        - git-push
+      params:
+        - name: token-secret
+          value: token-secret
+        - name: message
+          value: "Tekton had run $(context.pipelineRun.name) successfully"
