--- a/deploy/k8s/manifest.yaml
+++ b/deploy/k8s/manifest.yaml
@@ -21,7 +21,7 @@ spec:
     volumeHandle: pv-nfs-workorder-api-data
     volumeAttributes:
       server: storage-server.lan
-      share: /mnt/r10_8tb/k8s/workorder-api-data
+      share: /mnt/r10_8tb/k8s/workorder-data
       node_attach_driver: nfs
       provisioner_driver: node-manual
 
@@ -48,7 +48,7 @@ spec:
     volumeHandle: pv-nfs-workorder-worker-data
     volumeAttributes:
       server: storage-server.lan
-      share: /mnt/r10_8tb/k8s/workorder-worker-data
+      share: /mnt/r10_8tb/k8s/workorder-data
       node_attach_driver: nfs
       provisioner_driver: node-manual
 
@@ -57,7 +57,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: pvc-nfs-workorder-api-data
-  namespace: home-automation
+  namespace: tools
   annotations:
     volume.beta.kubernetes.io/storage-class: "freenas-nfs-manual-csi"
 spec:
@@ -74,7 +74,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: pvc-nfs-workorder-worker-data
-  namespace: home-automation
+  namespace: tools
   annotations:
     volume.beta.kubernetes.io/storage-class: "freenas-nfs-manual-csi"
 spec:
