--- a/src/app/api/requirements.txt
+++ b/src/app/api/requirements.txt
@@ -1,13 +1,12 @@
-anyio==3.4.0
-asgiref==3.4.1
-click==8.0.3
-fastapi==0.70.0
+anyio==3.6.1
+click==8.1.3
+fastapi==0.79.0
 greenlet==1.1.2
-h11==0.12.0
+h11==0.13.0
 idna==3.3
-pydantic==1.8.2
+pydantic==1.9.1
 sniffio==1.2.0
-SQLAlchemy==1.4.28
-starlette==0.16.0
-toml==0.10.2
-uvicorn==0.16.0
+SQLAlchemy==1.4.39
+starlette==0.19.1
+typing_extensions==4.3.0
+uvicorn==0.18.2
