--- a/deploy/k8s/manifest.yaml
+++ b/deploy/k8s/manifest.yaml
@@ -169,14 +169,16 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 3
           env:
-            - name: DATABASE_NAME
-              value: workdays
-            - name: DATABASE_USER
+            - name: "DATABASE_NAME"
+              value: "workdays"
+            - name: "DATABASE_HOSTNAME"
+              value: "workda"
+            - name: "DATABASE_USER"
               valueFrom:
                 secretKeyRef:
                   name: workorder-mysql-secrets
                   key: username
-            - name: DATABASE_PASSWORD
+            - name: "DATABASE_PASSWORD"
               valueFrom:
                 secretKeyRef:
                   name: workorder-mysql-secrets
@@ -228,6 +230,24 @@ spec:
                   key: password
       imagePullSecrets:
         - name: container-image-registry-credentials
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: workorder-mysql
+  namespace: tools
+  labels:
+    app: workorder-mysql
+spec:
+  selector:
+    app: workorder-mysql
+  type: ClusterIP
+  ports:
+    - name: http
+      protocol: TCP
+      port: 3306
+      containerPort: 3306
 
 ---
 kind: Service
