--- a/src/app/api/requirements.txt
+++ b/src/app/api/requirements.txt
@@ -4,6 +4,8 @@ fastapi==0.79.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+mysql-connector-python==8.0.30
+protobuf==3.20.1
 pydantic==1.9.1
 sniffio==1.2.0
 SQLAlchemy==1.4.39
